藥局相關API看起來是符合題目要求
